small style update to modals to prevent overflow

--- a/src/theme/global.scss
+++ b/src/theme/global.scss
@@ -64,3 +64,8 @@ ion-select {
     }
   }
 }
+
+.alert-radio-label.sc-ion-alert-md {
+  white-space: normal;
+  font-size: 14px;
+}
